--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,16 +3,31 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\User:
+            algorithm: auto
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
+            form_login:
+                login_path: signin
+                check_path: signin
+                default_target_path: home_page
+                username_parameter: _email
+            logout:
+                path: signout
+                target: home_page
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
